--- a/src/styles/universal.css
+++ b/src/styles/universal.css
@@ -20,7 +20,7 @@ body {
    background-image: linear-gradient(var(--color1), var(--color2));
    min-height: 100vh;
    background-repeat: no-repeat;
-   overflow: hidden;
+   /* overflow: hidden; */
 }
 
 .flex-center {
@@ -32,8 +32,8 @@ body {
 .flex-between {
    display: flex;
    align-items: center;
-   justify-content: space-between;
-   /* justify-content: center; */
+   /* justify-content: space-between; */
+   justify-content: center;
 }
 
 .flex-around {
